# Perkosrak

./: CMakeLists.txt  CUtils.c  README.md  blockallocator.c  blockallocator.h  consoleparser.c  consoleparser.h  cutils.c  cutils.h  dynamicarray.c  dynamicarray.h  garbagecollector.c  garbagecollector.h  hashmap.h  logger.c  logger.h  main.c  safety.c  safety.h  thread.c  thread.h
